--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <title>Document</title>
 </head>
-
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
-      </h1>
-      <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
-    <main class="container container-fluid mt-5">
-      <!-- Render the sub layout -->
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
+
+<main class="container">
+  <div class="row">
+    
+    <div class="col-3">
+      <div class="boxy">
+        <button type="button" class="btn btn-dark btn-lg btn-block">Current Orders</button>
+      </div>
+      <div class="boxy ">
+        <button type="button" class="btn btn-dark btn-lg btn-block">Past Orders</button>
+      </div>
+      <div class="boxy ">
+        <button type="button" class="btn btn-dark btn-lg btn-block">Customer Info</button>
+      </div>
+      <div class="boxy ">
+        <button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>
+      </div>
+      <div class="boxy">
+        <button type="button" class="btn btn-dark btn-lg btn-block">Menu</button>
+      </div>
+    </div>
+    
+  <div class="col-9 h-100">
+    <div class="boxy1">
+      {{body}}
+    </div>
   </div>
-
-  <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
+  </div>
+</main>
+    
 </body>
-
 </html>
