added orders handlebars finishing touches

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,9 +19,9 @@
       <div class="boxy ">
         <button type="button" class="btn btn-dark btn-lg btn-block">Past Orders</button>
       </div>
-      <div class="boxy ">
+      {{!-- <div class="boxy ">
         <button type="button" class="btn btn-dark btn-lg btn-block">Customer Info</button>
-      </div>
+      </div> --}}
       <div class="boxy ">
         <button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>
       </div>
