--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -1,17 +1,15 @@
-<!-- This template and others are the exact same as before, but now we are using a db instead of hardcoded data -->
+<h1>Orders:</h1>
 {{#each orders as |order|}}
 <div class="order-card">
   <div class="order-card-header">
     {{customer_name}}
+    {{order.time}}
   </div>
   <div class="card-body">
-    <p>
-      Orders:
       <ol>
 
      {{#each dishes as |dish|}}
         <li>
-            {{dish.time}}
             {{dish.name}}
             {{dish.addons}}
             {{dish.allergies}}
@@ -19,7 +17,6 @@
       {{/each}}
       
       </ol>
-    </p>
     
   </div>
 </div>
