--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-header, .project:not(:last-child) {
+/* header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 
@@ -21,4 +21,21 @@ header, .project:not(:last-child) {
   color: #056605;
   font-weight: bold;
   margin-left: -5px;
+} */
+
+body {
+  height: 100%;
+  width: 100%
+}
+.boxy {
+  /* border: 3px solid black; */
+  padding: 20px;
+  text-align: center;
+}
+
+.boxy1 {
+  border: 3px solid black;
+  padding: 20px;
+  text-align: center;
+  
 }
