--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../../public/css/style.css"/>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
@@ -32,7 +32,7 @@
     
   <div class="col-9 h-100">
     <div class="boxy1">
-      {{body}}
+      {{{body}}}
     </div>
   </div>
   </div>
