--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -4,9 +4,9 @@
   <div class="card-body">
     <h5 class="card-title">{{employee.name}}</h5>
     <ol class="card-text">
-        <li>{{ employee.position }}</li>
-        <li>{{ employee.address }}</li>
-        <li>{{ employee.user_id }}</li>
+        <li>{{ employee.id }}</li>
+        <li>{{ employee.name }}</li>
+        
     </ol>
     <a href="#" class="btn btn-primary">Edit Dish</a>
   </div>
