created orderroutes, need to fix include statement

--- a/views/dish-details.handlebars
+++ b/views/dish-details.handlebars
@@ -2,8 +2,8 @@
     <header>{{ dish_name }}</header>
 
     <div class="card-body">
-      {{ dish_description }}
-      {{ dish_allergies }}
+      {{ price }}
+      {{ allergy }}
     </div>
   
 </section>
