--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -1,14 +1,14 @@
 <h1>All Employees</h1>
-{{#each employees as |emplpoyee|}}
+{{#each employees as |employee|}}
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title">{{employee.name}}</h5>
-    <ol class="card-text">
-        <li>{{ employee.id }}</li>
-        <li>{{ employee.name }}</li>
+    <ul class="card-text">
+        <li>{{ employee.position }}</li>
+        <li>{{ employee.address }}</li>
         
-    </ol>
-    <a href="#" class="btn btn-primary">Edit Dish</a>
+    </ul>
+    
   </div>
 </div>
 {{/each}}
