fixed order routes to successfully display and edited order model

--- a/views/orders.handlebars
+++ b/views/orders.handlebars
@@ -5,21 +5,23 @@
 
   <div class="card-body">
 
-    {{!-- <ul>
+    
      {{#each order.dishes as |dish|}}
-        {{> dish-details}}
+    <section class="card text-dark">
+    <header>{{ dish.dish_name }}</header>
+
+    <div class="card-body">
+      {{ dish.price }}
+      {{ dish.allergy }}
+    </div>
+  
+</section>
+
      {{/each}}
-    </ul> --}}
+    {{!-- </ul> --}}
    
     
   </div>
 </div>
 {{/each}}
 
-{{!-- <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-  <div class="card-header">{{ customer_name }}</div>
-  <div class="card-body">
-    <h5 class="card-title">Secondary card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-</div> --}}
