--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@
 
 body {
   height: 100%;
-  width: 100%
+  width: 100%;
 }
 .boxy {
   /* border: 3px solid black; */
@@ -62,3 +62,6 @@ body {
   margin: 5px;
   font-size: 15px;
 }
+/* .dishcard {
+  color: black;
+} */
