--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,8 @@
         <button type="button" class="btn btn-dark btn-lg btn-block">Customer Info</button>
       </div> --}}
       <div class="boxy ">
-        <button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>
+        <!--<button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>-->
+         <a type="button" id = "employeeadmin" class="btn btn-dark btn-lg btn-block" href="/employees">Employees</a>
       </div>
       <div class="boxy">
         <button type="button" class="btn btn-dark btn-lg btn-block">Menu</button>
@@ -40,3 +41,6 @@
     
 </body>
 </html>
+
+
+<script src="js/employee.js"></script>
