added responsiveness and css styling

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,30 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-<header class="text-center">Nature's Palate Order Portal</header>
+<header class="text-center bg-dark text-white display-3">Nature's Palate Order Portal</header>
 <main class="container">
   <div class="row">
   {{#if loggedIn}}
-    <div class="col-3">
-      <div class="boxy">
+    <div class="col-sm-12 col-md-3">
+      <div class="boxy p-3">
         <button type="button" class="btn btn-dark btn-lg btn-block">Current Orders</button>
       </div>
-      <div class="boxy ">
-        <button type="button" class="btn btn-dark btn-lg btn-block">Past Orders</button>
-      </div>
-      {{!-- <div class="boxy ">
-        <button type="button" class="btn btn-dark btn-lg btn-block">Customer Info</button>
-      </div> --}}
-      <div class="boxy ">
+      <div class="boxy p-3">
         <!--<button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>-->
          <a type="button" id = "employeeadmin" class="btn btn-dark btn-lg btn-block" href="/employees">Employees</a>
       </div>
-      <div class="boxy">
+      <div class="boxy p-3">
         <button type="button" class="btn btn-dark btn-lg btn-block">Menu</button>
+      </div>
+      <div class="boxy p-3">
+        <button type="button" class="btn btn-dark btn-lg btn-block">Sign Up/Log In</button>
       </div>
     </div>
   {{/if}}  
-  <div class="col-9 h-100">
+  <div class="col-md-9 h-100">
     <div class="boxy1">
       {{{body}}}
     </div>
