--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/css/style.css"/>
+    <link rel="stylesheet" href="/css/style.css"/>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
@@ -21,7 +21,7 @@
          <a type="button" id = "employeeadmin" class="btn btn-dark btn-lg btn-block" href="/employees">Employees</a>
       </div>
       <div class="boxy p-3">
-        <button type="button" class="btn btn-dark btn-lg btn-block">Menu</button>
+        <a class="btn btn-dark btn-lg btn-block" href="/menu">Menu</a>
       </div>
       <div class="boxy p-3">
         <button type="button" class="btn btn-dark btn-lg btn-block">Sign Up/Log In</button>
@@ -40,4 +40,4 @@
 </html>
 
 
-<script src="js/employee.js"></script>
+<script src="/js/employee.js"></script>
