--- a/views/neworder.handlebars
+++ b/views/neworder.handlebars
@@ -2,20 +2,23 @@
 <div class="row">
 {{#each dishes as |dish|}}
 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-    <div class="card-header">
+    <div class="card-header dishname">
         {{ dish.dish_name }}
+        <input class="checkbox-dish" type="checkbox" value="{{dish.id}}">
     </div>
 
 <div class="card-body">
     <section class="card text-dark">
-        <header>{{ dish.price }}</header>
+        <header class="dish-price">{{ dish.price }}</header>
 
-        <div class="card-body">
+        <div class="card-body dishallergy">
             {{ dish.allergy }}
         </div>
     </section>  
 </div>
 </div>
-<input class="checkbox-dish" type="checkbox" value="{{dish.id}}">
+
 {{/each}}
 </div>
+
+<div class="orderbox"></div>
