--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
       </div>
       <div class="boxy p-3">
         <!--<button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>-->
-         <a type="button" id = "employeeadmin" class="btn btn-dark btn-lg btn-block" href="/employess">Employees</a>
+         <a type="button" id = "employeeadmin" class="btn btn-dark btn-lg btn-block" href="/employees">Employees</a>
       </div>
       <div class="boxy p-3">
         <a class="btn btn-dark btn-lg btn-block" href="/menu">Menu</a>
@@ -49,4 +49,4 @@
 <script src="js/signup.js"></script>
 <script src="js/login.js"></script>
 <script src="js/logout.js"></script>
-<script src="/js/employee.js"></script>
+
