--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
   {{#if logged_in}}
     <div class="col-sm-12 col-md-3">
       <div class="boxy p-3">
-        <button type="button" class="btn btn-dark btn-lg btn-block">Current Orders</button>
+        {{!-- <button type="button" class="btn btn-dark btn-lg btn-block">Current Orders</button> --}}
       </div>
       <div class="boxy p-3">
         <!--<button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>-->
