--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,8 @@
-<div class = "boxy1">
+<h1>Welcome!</h1>
+<div class="container">
+<div class="row"> 
+<div class = "col-sm">
   <img src = "{{ imagePath }}">
 </div>
-
-
-
+</div>
+</div>
