updates bootstrap styling for homepage

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,16 +35,28 @@
   </div>
     
     {{else}}
+   
+  <div class="text-center col-sm-12">
+      <div class="p-3">
         <a type="button" id = "login" class="btn btn-dark btn-lg btn-block" href="/login">Login</a>
+      </div>
+  </div>
+
+  <div class="text-center">
+      <div class="p-3">
         <a type="button" id = "signup" class="btn btn-dark btn-lg btn-block" href="/signup">Sign-Up</a>
-        <div class="col-sm-12 h-100">
+      </div>
+  </div>
+    
+    
+  <div class="col-sm-12 h-100">
     <div class="boxy1">
       {{{body}}}
     </div>
   </div>
   {{/if}}  
   
-  </div>
+</div>
 </main>
     
 </body>
