--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,16 @@
-<h1>Welcome!</h1>
+<h1>
+  <div class="p-2">Welcome! Please sign in.</div>
+</h1>
 <div class="container">
 <div class="row"> 
 <div class = "col-sm">
-  <img src = "{{ imagePath }}">
+  <img src = "{{ imagePath2 }}">
+</div>
+<div class = "col-sm">
+  <img src = "{{ imagePath1 }}">
+</div>
+<div class = "col-sm">
+  <img src = "{{ imagePath3 }}">
 </div>
 </div>
 </div>
