--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,7 @@
     <div class="col-sm-12 col-md-3">
       <div class="boxy p-3">
         {{!-- <button type="button" class="btn btn-dark btn-lg btn-block">Current Orders</button> --}}
+        <a type="button" id = "currentorders" class="btn btn-dark btn-lg btn-block" href="/orders">Current Orders</a>
       </div>
       <div class="boxy p-3">
         <!--<button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>-->
