added styling to homepage

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,21 @@
+{{#if logged_in}}
+<h1>
+  <div class="p-2">Welcome!</div>
+</h1>
+<div class="container">
+<div class="row"> 
+<div class = "col-sm">
+  <img src = "{{ imagePath2 }}">
+</div>
+<div class = "col-sm">
+  <img src = "{{ imagePath1 }}">
+</div>
+<div class = "col-sm">
+  <img src = "{{ imagePath3 }}">
+</div>
+</div>
+</div>
+{{else}}
 <h1>
   <div class="p-2">Welcome! Please sign in.</div>
 </h1>
@@ -14,3 +32,4 @@
 </div>
 </div>
 </div>
+{{/if}}
