chnaged the heading on employee handlbars and added underline in employee partial handlebars

--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -1,5 +1,5 @@
 
-<h4>All Employees</h4>
+<h4>Click on employee's name to see the details</h4>
 {{#each employees as |employee|}}
 
 {{> empdet employee=employee}}
