--- a/views/partials/empdet.handlebars
+++ b/views/partials/empdet.handlebars
@@ -1,9 +1,9 @@
 <div class="card" style="width: 18rem;" onclick="openContainer(this)">
   <div class="card-body">
-    <h5 class="card-title">{{employee.name}}</h5>
+    <h5 class="card-title"><i>{{employee.name}}</i></h5>
     <div class="card-text closed">
-        <p>Position:  {{ employee.position }}</p>
-        <p>Address:  {{ employee.address }}</p>
+        <p><b><u>Position:</u></b>  {{ employee.position }}</p>
+        <p><b><u>Address:</u> </b> {{ employee.address }}</p>
         
     </div>
     
