updated order seeds, orderroutes, and handlebars

--- a/views/orders.handlebars
+++ b/views/orders.handlebars
@@ -2,7 +2,7 @@
 <div class="row">
 {{#each orders as |order|}}
 <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
-    <div class="card-header">{{ order.id }} {{order.status}}</div>
+    <div class="card-header">{{ order.id }} {{order.customer_name}} {{order.status}}</div>
 
   <div class="card-body">
 
@@ -26,3 +26,6 @@
 </div>
 {{/each}}
 </div>
+
+
+
