made header a link that redirects back to home

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,9 @@
     <title>Nature's Palate</title>
 </head>
 <body>
-<header class="text-center bg-dark text-white display-3">Nature's Palate Order Portal</header>
+  <a style="text-decoration:none" href="/">
+<header><h1 class="text-center bg-dark text-white display-3">
+  Nature's Palate Order Portal</header></a>
 <main class="container">
   <div class="row">
   {{#if logged_in}}
