--- a/views/orders.handlebars
+++ b/views/orders.handlebars
@@ -26,6 +26,7 @@
 </div>
 {{/each}}
 </div>
+<a type="button" id = "neworder" class="btn btn-dark btn-lg btn-block" href="/api/orders/neworder">Create New Order</a>
 
 
 
