--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css"/>
+    {{!-- <script src="/public/js/orders.js"></script> --}}
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>Nature's Palate</title>
 </head>
@@ -70,5 +71,6 @@
 <script src="js/signup.js"></script>
 <script src="js/login.js"></script>
 <script src="js/logout.js"></script>
-<script src="../../public/js/orders.js"></script>
+<script src="/js/orders.js"></script>
+
 
