--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,10 @@
+{{!-- Main template for site --}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css"/>
-    {{!-- <script src="/public/js/orders.js"></script> --}}
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <title>Nature's Palate</title>
 </head>
@@ -17,18 +17,15 @@
   {{#if logged_in}}
     <div class="col-sm-12 col-md-3">
       <div class="boxy p-3">
-        {{!-- <button type="button" class="btn btn-dark btn-lg btn-block">Current Orders</button> --}}
         <a type="button" id = "currentorders" class="btn btn-dark btn-lg btn-block" href="/api/orders">Current Orders</a>
       </div>
       <div class="boxy p-3">
-        <!--<button type="button" class="btn btn-dark btn-lg btn-block">Employees</button>-->
          <a type="button" id = "employeeadmin" class="btn btn-dark btn-lg btn-block" href="/employees">Employees</a>
       </div>
       <div class="boxy p-3">
         <a class="btn btn-dark btn-lg btn-block" href="/menu">Menu</a>
       </div>
       <div class="boxy p-3">
-        <!--<button type="button" id = "logout" class="btn btn-dark btn-lg btn-block">Logout</button>-->
         <a type="button" id = "logout" class="btn btn-dark btn-lg btn-block">Logout</a>
       </div>
     </div>
